coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__streaming.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.0.0                                                           
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯                                                                        
                                                                                
❯ Explain Rust                                                                  
                                                                                
⏺ Rust is a systems programming language                                        
▌                                                                               
 Queue Input ───────────────────────────────────────────────────────────────────
~                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx 0% | →1 ←0
