coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__subagent_panel_populated.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮   COCO v0.0.0                                                                              
 │●│ │●│   opus-4  *  auto                                                                          
 ╰─╯ ╰─╯                                                                                            
                                                                                                    
Viewing @Explore · [esc to return]                                                                  
 Agents ────────────────────────────────────────────────────────────────────────────────────────────
▸ ● Search for auth handlers (Explore)                                                              
  ✓ Design refactor plan (Plan)                                                                     
  ✗ Run tests + verify (verification)                                                               
────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0% | ctx 0% | 0 msgs
