coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__subagent_result_summary.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.1.0                                                                               
 │●│ │●│  opus-4  *  auto                                                                           
 ╰─╯ ╰─╯                                                                                            
                                                                                                    
❯ explore the codebase                                                                              
                                                                                                    
● Explore(Map app/core crates)                                                                      
  └ ✓ 37 tools · 71.0s · ↑68.1k ↓468 · cache 95% · $0.18                                            
  └ Mapped the app/core crates and their responsibilities.                                          
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←1 · tool 1
