coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__thinking_collapsed.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.1.0                                                                           
 │●│ │●│  opus-4  *  auto                                                                       
 ╰─╯ ╰─╯                                                                                        
                                                                                                
❯ hello                                                                                         
                                                                                                
⏺ Thinking · 1.6s · 22 reasoning tok · F2 to expand                                             
                                                                                                
⏺ Hello! How can I help?                                                                        
                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                               
────────────────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←2                                            
 ? ask · shift+tab to cycle
