coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__thinking_expanded_show_thinking_on.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.0.0                                                                           
 │●│ │●│  opus-4  *  auto                                                                       
 ╰─╯ ╰─╯                                                                                        
                                                                                                
❯ bash ls                                                                                       
                                                                                                
⏺ Thinking · 1.3s · 15 reasoning tokens · F2 to collapse                                        
  The user wants me to run `ls` in the current working directory.                               
  I should call the Bash tool and then summarize the result.                                    
                                                                                                
🔧  Bash(ls)                                                                                     
  └ app                                                                                         
    bridge                                                                                      
    common                                                                                      
    utils                                                                                       
    vercel-ai                                                                                   
                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                               
────────────────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←2 · tool 1
