coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__tool_result_middle_truncation.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.1.0                                                                           
 │●│ │●│  opus-4  *  auto                                                                       
 ╰─╯ ╰─╯                                                                                        
                                                                                                
❯ find the CLAUDE.md                                                                            
                                                                                                
● Glob(**/CLAUDE.md)                                                                            
  └ Found 17 files                                                                              
    coco-rs/app/tui/CLAUDE.md                                                                   
    … +14 lines (ctrl+o to expand)                                                              
    coco-rs/vercel-ai/openai/CLAUDE.md                                                          
    codex-rs/tui/CLAUDE.md                                                                      
                                                                                                
────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                               
────────────────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←1 · tool 1                                   
 ? ask · shift+tab to cycle
