coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__with_messages.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 | opus-4                                                                       
❯ Hello, how are you?                                                           
                                                                                
  I'm doing well! How can I help you today?                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Input ─────────────────────────────────────────────────────────────────────────
❯ Type a message...                                                             
                                                                                
 opus-4 | Default | 2 msgs
