coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__with_toasts.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 | opus-4                                                                       
                                        ✓ Operation completed                   
                                        ✗ Something went wrong                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Input ─────────────────────────────────────────────────────────────────────────
❯ Type a message...                                                             
                                                                                
 opus-4 | Default | 0 msgs
