coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__with_tool_result.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 | opus-4                                                                       
❯ List files                                                                    
                                                                                
  ● Bash(ls -la)                                                                
                                                                                
  ● Bash                                                                        
    file1.rs                                                                    
    file2.rs                                                                    
    Cargo.toml                                                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Input ─────────────────────────────────────────────────────────────────────────
❯ Type a message...                                                             
                                                                                
 opus-4 | Default | 3 msgs
